infrastructure/base/minio/minio-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minio-app
  name: minio-deployment
  namespace: minio
spec:
  selector:
    matchLabels:
      app: minio-app
  replicas: 1
  template:
    metadata:
      labels:
        app: minio-app
    spec:
      containers:
        - resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 20m
              memory: 100Mi
          name: minio
          image: quay.io/minio/minio:latest
          command:
          - /bin/bash
          - -c
          args:
          - minio server /data --console-address :9090
          ports:
          - containerPort: 9000
            name: web
            protocol: TCP
          - containerPort: 9090
            protocol: TCP
            name: api
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: /data
            name: data-volume
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: 9000
            initialDelaySeconds: 30
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: minio-pvc
