infrastructure/base/minio/minio-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-web
  namespace: minio
spec:
  type: ClusterIP
  selector:
    app: minio-app
  ports:
  - name: web
    port: 9000
    targetPort: web

---
apiVersion: v1
kind: Service
metadata:
  name: minio-api
  namespace: minio
spec:
  type: ClusterIP
  selector:
    app: minio-app
  ports:
  - name: api
    port: 9090
    targetPort: api
