infrastructure/base/minio/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - minio.prod.ftscode.de
        - minio-console.prod.ftscode.de
      secretName: minio-tls-production
  rules:
    - host: "minio.prod.ftscode.de"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: minio-web
              port:
                number: 9000
    - host: "minio-console.prod.ftscode.de"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: minio-api
              port:
                number: 9090
